# dj-library-gain-calculator

./: .gitignore  Cargo.toml  README.md  find-missing-attr.sh
.github/workflows/: main.yml
src/: analysis.rs  cache.rs  cli.yml  collection.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  progress.rs  scanner.rs  utils.rs
src/traktor/: mod.rs  models.rs
tests/: integration_test.rs  scanning_test.rs
tests/vectors/: 1_element_collection.nml  collection_with_1_playlist.nml  collection_with_2_sorting_orders.nml  sine-440-16.flac  sine-440-24.flac
