[package]
name = "dj-library-gain-calculator"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>", "Raphaël Lustin <raphael@lustin.fr>"]
edition = "2018"

[dependencies]
audrey = "0.2"
clap = { version = "2.33.0", features = ["yaml"] }
claxon = "0.4.2"
cfg-if = "0.1"
ebur128 = "0.1.0"
hound = "3.4.0"
minimp3 = "0.3"
parking_lot = { version = "0.10", features = ["serde"] }
quick-xml = { version = "0.17", features = ["serialize"] }
rayon = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
tempdir = "0.3"

[dev-dependencies]
assert_cmd = "0.10"
