[package]
name = "dj-library-gain-calculator"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>", "Raphaël Lustin <raphael@lustin.fr>"]
edition = "2021"

[dependencies]
audrey = "0.3"
bitflags = "2.6.0"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["cargo"] }
claxon = "0.4.3"
console = "0.10.0"
directories = "2.0"
ebur128 = "0.1.0"
hound = "3.4.0"
indicatif = "0.14.0"
lazy_static = "1.4.0"
log = "0.4"
parking_lot = { version = "0.10", features = ["serde"] }
quick-xml = { version = "0.17", features = ["serialize"] }
rayon = "1.3"
rmp3 = { version = "0.3", features = ["float"] }
rusqlite = "0.23.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tempdir = "0.3"

[dev-dependencies]
assert_cmd = "0.10"
walkdir = "2"
